--- a/sources/ui/mainwindow.ui
+++ b/sources/ui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>649</width>
-    <height>472</height>
+    <width>654</width>
+    <height>456</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -116,8 +116,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>605</width>
-             <height>340</height>
+             <width>610</width>
+             <height>324</height>
             </rect>
            </property>
            <layout class="QHBoxLayout" name="horizontalLayout">
@@ -191,6 +191,11 @@
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionTill_test">
+   <property name="text">
+    <string>Till test</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
